courses/430_programming-languages/assignment-5/tests/error/error10.sml
val prog =
  PROGRAM
    {decls=[],func_decls=[],
     stmts=[ST_EXP {exp=EXP_CALL {args=[EXP_BOOL true],func=EXP_ID "f"}}]}
  : program
;
